Refactor paper structure and content for clarity and completeness
- Removed placeholder packages and added zref-abspage for accurate page numbering.
- Updated the abstract to enhance clarity and focus on key contributions.
- Revised assumptions section to clarify notation and ensure consistency.
- Expanded model section with detailed PCA--LSTM feature fusion methodology and added training algorithm.
- Created a new results section to present findings with visualizations and interpretations.
- Deleted outdated results discussion section and integrated relevant content into the new results section.
- Enhanced validation section with detailed sensitivity and robustness analysis.
- Updated policy recommendations to reflect actionable insights based on analysis.
- Strengthened conclusion to summarize the framework's contributions and implications.

--- a/Paper/ref.bib
+++ b/Paper/ref.bib
@@ -1,13 +1,40 @@
-@article{example_cite,
-  title   = {Example Reference for MCM/ICM Thesis},
-  author  = {Author, A.},
-  journal = {Journal of Mathematical Modeling},
-  year    = {2026}
+% 1. 关于 XGBoost 的经典论文（支持你的预测模型）
+@inproceedings{chen2016xgboost,
+  title={Xgboost: A scalable tree boosting system},
+  author={Chen, Tianqi and Guestrin, Carlos},
+  booktitle={Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining},
+  pages={785--794},
+  year={2016}
 }
 
-@article{todo_ref1,
-  title   = {TODO: Add real reference title},
-  author  = {TODO},
-  journal = {TODO},
-  year    = {2026}
+% 2. 关于 LSTM 在时间序列预测中的应用（支持你的 PCA-LSTM）
+@article{hochreiter1997long,
+  title={Long short-term memory},
+  author={Hochreiter, Sepp and Schmidhuber, J{\"u}rgen},
+  journal={Neural computation},
+  volume={9},
+  number={8},
+  pages={1735--1780},
+  year={1997},
+  publisher={MIT Press}
+}
+
+% 3. 关于 DID 模型（双重差分法）在政策评估中的应用（支持你的教练效应分析）
+@article{bertrand2004how,
+  title={How Much Should We Trust Differences-in-Differences Estimates?},
+  author={Bertrand, Marianne and Duflo, Esther and Mullainathan, Sendhil},
+  journal={The Quarterly Journal of Economics},
+  volume={119},
+  number={1},
+  pages={249--275},
+  year={2004}
+}
+
+% 4. 关于 SHAP 解释性分析（支持你的 event 贡献度分析）
+@article{lundberg2017unified,
+  title={A unified approach to interpreting model predictions},
+  author={Lundberg, Scott M and Lee, Su-In},
+  journal={Advances in neural information processing systems},
+  volume={30},
+  year={2017}
 }
