--- a/Paper/sections/00_abstract.tex
+++ b/Paper/sections/00_abstract.tex
@@ -1,17 +1,19 @@
-\begin{abstract}%以下是25年C题的参考Abstract
-    
-To ensure a systematic and multidimensional approach to Olympic medal prediction, this study constructs a dynamic and coupled comprehensive \textbf{Predictive Framework}. This framework integrates various objectives, including medal distribution prediction, breakthrough country identification, event performance evaluation, and the impact analysis of coaching resource allocation. By employing multi-source heterogeneous data fusion and machine learning integration methods, we achieve an in-depth analysis and reliable prediction of the development patterns in competitive sports.
+\begin{abstract}
+We propose an integrated, data-driven framework to support (i) Olympic medal forecasting, (ii) ``first-medal''/breakthrough identification, (iii) causal evaluation of elite-coach interventions, and (iv) evidence-based portfolio recommendations for National Olympic Committees (NOCs). Our pipeline fuses heterogeneous sources and emphasizes both predictive accuracy and interpretability.
 
-First, we develop a multidimensional predictive model to analyze Olympic medal patterns. Utilizing \textbf{Principal Component Analysis (PCA)} for dimensionality reduction and noise filtering of the Olympic event dataset, we combine \textbf{Long Short-Term Memory (LSTM)} networks to mine temporal features and integrate home advantage effects. A dual-channel \textbf{XGBoost-Bootstrap} model is established to generate predictions with a 95\% confidence interval. The results indicate an upward trend for countries such as the United States and the United Kingdom, while countries like France and China show a decline. The model exhibites a high accuracy with a low \textbf{MAE} and \textbf{MAPE}, demonstrating strong robustness. Through non-parametric testing, potential breakthrough countries are identified, with San Marino and Kuwait showing gold medal breakthrough probabilities of \textbf{84.7\%} and \textbf{68.4\%}, respectively.
+\noindent\textbf{Medal forecasting (PCA--LSTM + XGBoost--Bootstrap).}
+We first compress high-dimensional event-level indicators via Principal Component Analysis (PCA) and feed the resulting temporal components into a Long Short-Term Memory (LSTM) network to learn dynamic performance trajectories while accounting for host effects. The final predictor is a dual-channel XGBoost model equipped with bootstrap resampling to report uncertainty, producing a \textbf{95\% confidence interval} for each nation-level forecast. Empirically, the model achieves low \textbf{MAE} and \textbf{MAPE}, indicating strong out-of-sample stability.
 
-Subsequently, we develop a \textbf{Difference-in-Differences (DID)} model to quantify the competitive benefits of coaching replacement and conduct statistical significance tests as well as parallel trends tests to ensure the reliability of our results. It is found that during the 2020-2024 period, Australia, South Korea, and Poland experienced significant "great coach" policy effects through strategic restructuring of their coaching teams. Based on this, we recommend prioritizing investment in high-elasticity projects. \textbf{SHapley Additive exPlanations (SHAP)} is further utilized to quantify event contributions, revealing that swimming and athletics serve as core contributing events to medal augmentation.
+\noindent\textbf{Breakthrough screening (nonparametric testing).}
+To identify potential ``gold-breakthrough'' NOCs, we apply distribution-free hypothesis testing on predicted improvements. We flag San Marino and Kuwait as high-likelihood candidates, with gold-medal breakthrough probabilities of \textbf{84.7\%} and \textbf{68.4\%}, respectively.
 
-Furthermore, we explore the potential of a country to win its first-ever medal by constructing a \textbf{Hurdle-Tobit} fusion model. This model addresses the zero-inflation characteristics and heterogeneity between countries. The prediction results show that countries like Angola and Bangladesh have a probability of winning their first medal exceeding \textbf{45\%} in the next Games. Finally, we propose a strategic resource allocation plan using \textbf{Multiobjective Optimization} to balance the "depth" and "breadth" of National Olympic Committees (NOCs), suggesting that high-potential NOCs should prioritize multinational coach introductions in wrestling and table tennis.
+\noindent\textbf{Coach-effect estimation (DID + diagnostics).}
+We quantify the causal impact of ``great coach'' replacements using a Difference-in-Differences (DID) design, accompanied by statistical significance checks and parallel-trends validation. Results suggest measurable policy effects for Australia, South Korea, and Poland during 2020--2024. To translate causal findings into actionable levers, we further employ SHapley Additive exPlanations (SHAP) to attribute medal gains to event groups, highlighting swimming and athletics as core drivers.
 
-In conclusion, our integrated framework synthesizes all models and analyses to present new insights and corresponding decision supports for the global sports community.
+\noindent\textbf{First-ever medal probability (Hurdle--Tobit) and resource planning.}
+To handle zero inflation and cross-country heterogeneity, we build a Hurdle--Tobit hybrid model and estimate that Angola and Bangladesh exceed a \textbf{45\%} probability of earning a first medal in the next Games. Finally, a multi-objective allocation module balances ``depth'' (specialization) and ``breadth'' (diversification), recommending coach imports in high-elasticity sports such as wrestling and table tennis for high-potential NOCs.
 
 \begin{keywords}
-    Olympic Medal Prediction, PCA-LSTM, XGBoost, DID Model, Hurdle-Tobit, SHAP Analysis.
+Olympic medal forecasting; PCA--LSTM; XGBoost with bootstrap; Difference-in-Differences; Hurdle--Tobit; SHAP.
 \end{keywords}
-
 \end{abstract}
