--- a/Paper/sections/07_policy.tex
+++ b/Paper/sections/07_policy.tex
@@ -11,6 +11,6 @@
     Based on our quantitative analysis, we suggest...
     \begin{itemize}
         \item \textbf{Priority A}: Build resilient infrastructure...
-        \item \textbf{Priority B}: \lipsum[6]
+        \item \textbf{Priority B}: Establish a medal-yield audit mechanism that links funding increments to marginal medal returns and uncertainty (e.g., prioritize sports with high expected gains and narrow predictive intervals).
     \end{itemize}
 \end{quote}
