--- a/Paper/sections/08_strengths.tex
+++ b/Paper/sections/08_strengths.tex
@@ -12,4 +12,4 @@
 \end{itemize}
 
 \subsection{Conclusion}
-\lipsum[7]
+Overall, our framework balances predictive performance, causal interpretability, and actionable recommendations. The hybrid PCA--LSTM--XGBoost module provides uncertainty-aware forecasts, while the DID analysis offers policy-relevant evidence on coaching interventions; together, they form a coherent decision-support pipeline for NOCs.
