--- a/Paper/main.tex
+++ b/Paper/main.tex
@@ -34,10 +34,11 @@
 \usepackage{palatino}
 \usepackage{microtype}
 \setlength{\emergencystretch}{2em}
-\usepackage{lipsum}             % 占位文字（提交前删除）
+% \usepackage{lipsum}             % 占位文字（已移除，避免占位文本进入终稿）
 
 % --- 页面与布局 ---
 \usepackage{lastpage}           % 获取总页数
+\usepackage{zref-abspage}       % 获取物理页码（避免 \maketitle 等重置 page 计数器）
 \usepackage{float}              % 强制图表位置 [H] 选项
 \usepackage{geometry}           % 页边距微调（如需）
 \setlength{\headheight}{15pt}   % 修复 fancyhdr 警告
@@ -159,6 +160,7 @@
 % ========================== PART 2: 正文 ==========================
 % 【重要】正文从阿拉伯数字 1 开始，显示 "Page X of Y"
 \newpage
+\setcounter{page}{\numexpr\value{abspage}+1\relax}
 \pagestyle{fancy}
 \fancyhf{} % 清空页眉页脚
 \fancyhead[L]{\small Team \#2617892}
@@ -170,7 +172,7 @@
 \input{sections/02_data.tex}            % 数据预处理（C题核心）
 \input{sections/03_assumptions.tex}     % 假设与符号说明
 \input{sections/04_model.tex}           % 数学模型
-\input{sections/05_solution.tex}        % 求解算法
+\input{sections/05_results.tex}         % 结果展示与讨论（含图表占位）
 \input{sections/06_validation.tex}      % 模型验证
 \input{sections/07_policy.tex}          % 政策建议 / 敏感性分析
 \input{sections/08_strengths.tex}       % 优缺点总结
