--- a/Paper/sections/01_intro.tex
+++ b/Paper/sections/01_intro.tex
@@ -1,22 +1,43 @@
+% Section 1: Introduction
+% 引言部分：问题背景 + 问题重述 + 本文工作概述
+
 \section{Introduction}
+\label{sec:intro}
 
+% 1.1 问题背景
 \subsection{Problem Background}
-The Olympic Games stand as the pinnacle of global sporting competition, evolving into a complex socio-economic phenomenon where medal counts signify more than just athletic prowess—they reflect a nation's investment in human capital, strategic planning, and systematic resource allocation. As the 2024 Paris Olympics underscored, the disparity in medal distribution remains significant, with some traditional powerhouses maintaining dominance while emerging nations strive for "first-medal" breakthroughs. Predicting these outcomes precisely requires navigating high-dimensional datasets encompassing historical performance, socio-economic indicators, and the influence of elite coaching.
+\label{subsec:background}
 
-\subsection{Problem Restatement}
+The Olympic Games stand as the pinnacle of global sporting competition, evolving into a complex socio-economic phenomenon where medal counts signify more than just athletic prowess---they reflect a nation's investment in human capital, strategic planning, and systematic resource allocation. As the 2024 Paris Olympics underscored, the disparity in medal distribution remains significant, with some traditional powerhouses maintaining dominance while emerging nations strive for ``first-medal'' breakthroughs. Predicting these outcomes precisely requires navigating high-dimensional datasets encompassing historical performance, socio-economic indicators, and the influence of elite coaching.
+
+% 1.2 问题重述
+\subsection{Restatement of the Problem}
+\label{subsec:restatement}
+
 To address the requirements of the 2025 MCM Problem C, we are tasked with developing a comprehensive analytical framework to:
-\begin{itemize}
-    \item \textbf{Predict Medal Distribution}: Forecast the number of gold and total medals for nations in the upcoming Games, accounting for temporal trends and home advantage.
-    \item \textbf{Identify Potential Breakthroughs}: Quantify the probability of countries winning their first-ever medal, specifically targeting historically underrepresented nations.
-    \item \textbf{Evaluate Coaching Effects}: Estimate the causal impact of "Great Coaches" on a nation's medal trajectory using rigorous econometric methods.
-    \item \textbf{Strategic Planning}: Provide actionable recommendations for National Olympic Committees (NOCs) to optimize their sports portfolios and coaching staff.
+\begin{itemize}[itemsep=0.3em]
+    \item \textbf{Predict Medal Distribution:} Forecast the number of gold and total medals for nations in the upcoming Games, accounting for temporal trends and home advantage.
+    \item \textbf{Identify Potential Breakthroughs:} Quantify the probability of countries winning their first-ever medal, specifically targeting historically underrepresented nations.
+    \item \textbf{Evaluate Coaching Effects:} Estimate the causal impact of ``Great Coaches'' on a nation's medal trajectory using rigorous econometric methods.
+    \item \textbf{Strategic Planning:} Provide actionable recommendations for National Olympic Committees (NOCs) to optimize their sports portfolios and coaching staff.
 \end{itemize}
 
-\subsection{Our Contributions}
+% 1.3 本文工作概述（建议配流程图）
+\subsection{Our Work}
+\label{subsec:ourwork}
+
 Our study introduces several methodological innovations to the field of sports analytics:
-\begin{enumerate}
-    \item \textbf{Hybrid Prediction Engine}: A coupled PCA-LSTM-XGBoost framework that captures both linear and non-linear patterns in Olympic data.
-    \item \textbf{Causal Inference for Elite Coaching}: Application of a DID model to isolate the policy effect of coaching replacements from natural athletic progression.
-    \item \textbf{Inclusive Forecasting}: A Hurdle-Tobit model specifically tuned for zero-inflated datasets to predict "miraculous" breakthroughs for smaller nations.
-    \item \textbf{Explainable AI (XAI)}: Deployment of SHAP values to demystify "black-box" predictions, providing transparent insights into why certain nations succeed.
+\begin{enumerate}[itemsep=0.3em]
+    \item \textbf{Hybrid Prediction Engine:} A coupled PCA--LSTM--XGBoost framework that captures both linear and non-linear patterns in Olympic data.
+    \item \textbf{Causal Inference for Elite Coaching:} Application of a Difference-in-Differences (DID) model to isolate the policy effect of coaching replacements from natural athletic progression.
+    \item \textbf{Inclusive Forecasting:} A Hurdle--Tobit model specifically tuned for zero-inflated datasets to predict ``miraculous'' breakthroughs for smaller nations.
+    \item \textbf{Explainable AI (XAI):} Deployment of SHAP values to demystify ``black-box'' predictions, providing transparent insights into why certain nations succeed.
 \end{enumerate}
+
+% 【提示】此处建议插入模型流程图，展示整体框架
+% \begin{figure}[H]
+%     \centering
+%     \includegraphics[width=0.9\textwidth]{figures/workflow.pdf}
+%     \caption{Overview of our analytical framework.}
+%     \label{fig:workflow}
+% \end{figure}
